# farjad-backend

./: .gitignore  .ruff.toml  Dockerfile  README.md  check_data.py  manage.py  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
farjad/: asgi.py  settings.py  urls.py  wsgi.py
farjad/settings/: base.py  development.py  production.py  test.py
finance/: admin.py  models.py  serializers.py  urls.py  views.py
finance/migrations/: 0001_initial.py
inventory/: admin.py  models.py  serializers.py  urls.py  views.py
inventory/migrations/: 0001_initial.py
services/: admin.py  models.py  serializers.py  urls.py  views.py
services/migrations/: 0001_initial.py
